--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -110,9 +110,10 @@
     <script src="https://unpkg.com/notie"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script scr="/static/js/app.js"></script>
+  
 
     {{block "js" .}}
+    
     {{end}}
 
     <script>
@@ -160,20 +161,143 @@
         }
 
         {{with .Error}}
-        notify("{{.}}", "error");
+        notify("{{.}}", "error")
         {{end}}
 
         {{with .Flash}}
-        notify("{{.}}", "success");
+        notify("{{.}}", "success")
         {{end}}
 
         {{with .Warning}}
-        notify("{{.}}", "warning");
+        notify("{{.}}", "warning")
         {{end}}
+    
+
+        // Prompt is our javascript module for all alerts, notifications, and custom pop-up dialogs
+        function Prompt() {
+            let toast = function (c) {
+                const {
+                    msg = "",
+                    icon = "success",
+                    position = "top-end",
+
+                } = c;
+
+                const Toast = Swal.mixin({
+                    toast: true,
+                    title: msg,
+                    position: position,
+                    icon: icon,
+                    showConfirmButton: false,
+                    timer: 3000,
+                    timerProgressBar: true,
+                    didOpen: (toast) => {
+                        toast.addEventListener('mouseenter', Swal.stopTimer)
+                        toast.addEventListener('mouseleave', Swal.resumeTimer)
+                    }
+                })
+
+                Toast.fire({})
+
+            }
+
+            let success = function (c) {
+                const {
+                    msg = "",
+                    title = "",
+                    footer = "",
+
+                } = c;
+
+                Swal.fire({
+                    icon: 'success',
+                    title: title,
+                    text: msg,
+                    footer: footer,
+                })
+            }
+
+            let error = function (c) {
+                const {
+                    msg = "",
+                    title = "",
+                    footer = "",
+
+                } = c;
+
+                Swal.fire({
+                    icon: 'error',
+                    title: title,
+                    text: msg,
+                    footer: footer,
+                })
+            }
+
+            async function custom(c) {
+                const {
+                    icon = "",
+                    msg = "",
+                    title = "",
+                    showConfirmButton = true,
+
+                } = c;
+
+                const {value: result} = await Swal.fire({
+                    icon: icon,
+                    title: title,
+                    html: msg,
+                    backdrop: false,
+                    focusConfirm: false,
+                    showCancelButton: true,
+                    showConfirmButton: showConfirmButton,
+
+                    willOpen: () => {
+                        if (c.willOpen !== undefined) {
+                            c.willOpen();
+                        }
+                    },
+
+                    didOpen: () => {
+                        if (c.didOpen !== undefined) {
+                            c.didOpen();
+                        }
+                    },
+
+                    preConfirm: () => {
+                        return [
+                            document.getElementById('start').value,
+                            document.getElementById('end').value
+                        ]
+                    },
+
+                })
+
+                if (result) {
+                    if (result.dismiss !== Swal.DismissReason.cancel) {
+                        if (result.value !== "") {
+                            if (c.callback !== undefined) {
+                                c.callback(result);
+                            }
+                        } else {
+                            c.callback(false);
+                        }
+                    } else {
+                        c.callback(false);
+                    }
+                }
+            }
+
+            return {
+                toast: toast,
+                success: success,
+                error: error,
+                custom: custom,
+            }
+        }
+
 
 
     </script>
-
 
     </body>
 
