--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -7,7 +7,7 @@
         <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
               name="viewport">
         <meta content="ie=edge" http-equiv="X-UA-Compatible">
-        <title>Document</title>
+        <title>Drew's Bed and Breakfast</title>
     </head>
     <body>
 
@@ -21,7 +21,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
 
 
-        <title>My fabulous page></title>
+        <title>Drew's Bed and Breakfast</title>
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
@@ -31,7 +31,7 @@
         <link href="/static/css/styles.css" rel="stylesheet" type="text/css">
 
         <style>
-
+            
         </style>
 
     </head>
@@ -40,7 +40,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">&nbsp;</a>
             <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler"
                     data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
@@ -103,20 +103,31 @@
 
     {{end}}
 
-    <div class="row my-footer">
-        <div class="col">
-            Left
+    <footer class="row my-footer">
+    <div class="row">
+        <div class="col text-center">
+            <strong>Drew's Bed &amp; Breakfast</strong><br>
+            13 Gayaza Road<br>
+            Rubaga, Kampala<br>
+            Uganda<br>
+            (+256) 701788205<br>
+            <a href="mailto:info@drewbb.co.ug">info@drewbb.co.ug</a>
         </div>
 
         <div class="col">
-            Middle
+            
         </div>
 
         <div class="col">
-            Right
+            
+                The place to create <br>
+                
+                Beautiful Memories.
+           
         </div>
 
     </div>
+    </footer>
 
     <script crossorigin="anonymous"
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
