--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 class="mt-3">About Fort Smythe</h1>
+            <h1 class="mt-3">About Drew's Bed &amp; Breakfast</h1>
             <hr>
 
             <p>
