--- a/templates/contact.page.tmpl
+++ b/templates/contact.page.tmpl
@@ -17,12 +17,12 @@
 
                     <div class="col-md-6 text-center">
 
-                        <strong>Fort Smythe Bed & Breakfast</strong><br>
-                        100 Rocky Road<br>
-                        Northbrook, Ontario<br>
-                        Canada<br>
-                        (416) 555-1212<br>
-                        <a href="mailto:info@sfbb.ca">info@fsbb.ca</a>
+                        <strong>Drew's Bed & Breakfast</strong><br>
+                        13 Gayaza Road<br>
+                        Rubaga, Kampala<br>
+                        Uganda<br>
+                        (+256) 701788205<br>
+                        <a href="mailto:info@drewbb.co.ug">info@drewbb.co.ug</a>
 
                     </div>
                 </div>
